--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "gist-flutter",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --target wc --name gist-flutter --dest docs",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
